--- a/template.tumblr.html
+++ b/template.tumblr.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/css-social-buttons/1.3.0/css/zocial.min.css">
-    <link rel="stylesheet" type="text/css" href="https://bug2bug.ru/css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://bug2bug.me/css/main.css">
     
     <script type="text/javascript">
 
@@ -67,10 +67,10 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="">
-                <a href="https://bug2bug.ru/" id="menu_about">About</a>
+                <a href="https://bug2bug.me/" id="menu_about">About</a>
               </li>
               <li class="active">
-                <a href="https://t.bug2bug.ru/" id="menu_tlog">Tlog</a>
+                <a href="https://t.bug2bug.me/" id="menu_tlog">Tlog</a>
               </li>
             </ul>
           </div>
