Update About Profile

--- a/template.tumblr.html
+++ b/template.tumblr.html
@@ -80,7 +80,6 @@
 
     <div class="container">
       <div class="clear padding60"></div>
-      <!-- Example row of columns -->
       <div class="row">
         <div class="span8">
           <div class="clear padding30"></div>
@@ -383,7 +382,7 @@ Answer: {PlaintextAnswer}{/block:Answer}</a>
       <hr>
 
       <footer>
-        <p style="padding-left: 10px;">&copy; 2012-2018, <a href="https://profitware.ru/">The Profitware Group</a></p>
+        <p style="padding-left: 10px;">&copy; 2012-2018, <a href="https://bug2bug.me/">Sergey Sobko</a></p>
       </footer>
 
     </div> <!-- /container -->
@@ -391,7 +390,8 @@ Answer: {PlaintextAnswer}{/block:Answer}</a>
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
     $(document).ready(function() {
