--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Sergey Sobko - About</title>
     <!--  {block:Description}  --><meta name="description" content="About Sergey Sobko" /><!-- {/block:Description}  -->
-    <link rel="shortcut icon" href="https://78.media.tumblr.com/avatar_3de74fa5fed4_128.pnj" />
-    <link rel="apple-touch-icon" href="https://78.media.tumblr.com/avatar_3de74fa5fed4_128.pnj"/>
+    <link rel="shortcut icon" href="https://bug2bug.me/img/avatar.jpg" />
+    <link rel="apple-touch-icon" href="https://bug2bug.me/img/avatar.jpg"/>
     <link rel="alternate" type="application/rss+xml" href="https://t.bug2bug.me/rss" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap-responsive.min.css" />
@@ -263,7 +263,7 @@
           <div class="well">
             <div class="bavatar">
               <a href="/">
-                <img src="https://78.media.tumblr.com/avatar_3de74fa5fed4_128.pnj">
+                <img src="https://bug2bug.me/img/avatar.jpg">
               </a>
               <p class="atext">...Music and Open Source Software Creator / Wake up, Neo...</p>
             </div>
