--- a/template.tumblr.html
+++ b/template.tumblr.html
@@ -292,7 +292,7 @@ Answer: {PlaintextAnswer}{/block:Answer}</a>
           <div class="well">
             <div class="bavatar">
                 <a href="/">
-                    <img src="{PortraitURL-128}">
+                    <img src="https://bug2bug.me/img/avatar.jpg">
                 </a>
                 <p class="atext">...Music and Open Source Software Creator / Wake up, Neo...</p>
             </div>
