--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
               <a href="https://github.com/PositiveTechnologies/flower">Flower</a>
               Open Source R&amp;D using Clojure.
               <ul>
-                <li>Implemented <a href="https://github.com/PositiveTechnologies/flower/wiki/1.1.-Task-trackers">integrations with task trackers</a> for Jira, TFS, Github and Gitlab.</li>
-                <li>Implemented <a href="https://github.com/PositiveTechnologies/flower/wiki/1.3.-Repositories">integrations with version control systems</a> for Github and Gitlab.</li>
-                <li>Implemented <a href="https://github.com/PositiveTechnologies/flower/wiki/1.4.-Messaging">integrations with messaging systems</a> for Exchange and Slack.</li>
-                <li>Created Automatic Teamlead software based on the library to automate routines for the Application Firewall development team.</li>
-                <li>Created <a href="https://melpa.org/#/flower">Emacs task tracker client</a> using the library.</li>
-                <li>Had <a href="https://www.youtube.com/watch?v=fZuyfjlZO0o">a talk about the library</a> at <a href="https://www.meetup.com/Moscow-Clojure-Script-Meetup/events/244816712/">the Clojure Meetup</a>.</li>
-                <li>Held <a href="https://www.meetup.com/Moscow-Clojure-Script-Meetup/events/247691163/">ClojureScript Workshop</a> at Positive Technologies HQ as a co-organizer and <a href="https://www.youtube.com/playlist?list=PL_BdZ5f34CNLXKYNYmdLWkyBlWyM8E_K7">streamed live on YouTube</a>.</li>
+                <li>Implemented <a href="https://github.com/PositiveTechnologies/flower/wiki/1.1.-Task-trackers">integrations with task trackers</a> (Jira, TFS, GitHub and GitLab).</li>
+                <li>Implemented <a href="https://github.com/PositiveTechnologies/flower/wiki/1.3.-Repositories">integrations with version control systems</a> (GitHub and GitLab).</li>
+                <li>Implemented <a href="https://github.com/PositiveTechnologies/flower/wiki/1.4.-Messaging">integrations with messaging systems</a> (Exchange and Slack).</li>
+                <li>Created Automatic Teamlead software based on the Flower library to automate routines for the Application Firewall development team.</li>
+                <li>Created <a href="https://melpa.org/#/flower">Emacs task tracker client</a> using the Flower library.</li>
+                <li>Had <a href="https://www.youtube.com/watch?v=fZuyfjlZO0o">a talk about the Flower library</a> at <a href="https://www.meetup.com/Moscow-Clojure-Script-Meetup/events/244816712/">the Clojure Meetup</a>.</li>
+                <li>Held <a href="https://www.meetup.com/Moscow-Clojure-Script-Meetup/events/247691163/">ClojureScript Workshop</a> at Positive Technologies HQ as a co-organizer and <a href="https://www.youtube.com/playlist?list=PL_BdZ5f34CNLXKYNYmdLWkyBlWyM8E_K7">streamed it on YouTube</a>.</li>
               </ul>
             </div>
             <div class="clear padding30"></div>
@@ -109,10 +109,10 @@
                 <li>Created domain-specific language and interpreter for network configuration.</li>
                 <li>Created device package for <a href="https://marketplace.cisco.com/catalog/solution/154263?pid=110300">PT AF integration with Cisco ACI</a>.</li>
                 <li>Designed architectural solution for data structure unification.</li>
-                <li><a href="img/team_leader_certificate.jpg">Managed</a> AF user interface team which gradually
+                <li><a href="img/team_leader_certificate.jpg">Head</a> of Application Firewall UI team which
                   increased up to 10 members.</li>
                 <li>Presented Cisco ACI and PT AF integration at Positive Hack Days VI.</li>
-                <li>Implemented part of PT AF transparent proxy mode.</li>
+                <li>Participated in development of transparent proxy mode for PT AF.</li>
               </ul>
             </div>
             <div class="clear padding30"></div>
@@ -121,8 +121,8 @@
               <a href="https://af.ptsecurity.com/">PT Application Firewall</a>
               R&amp;D using Python (Flask, Twisted), Groovy and JavaScript.
               <ul>
-                <li>Implemented Active Directory integration for PT AF configuration UI.</li>
-                <li>Created detailed report generation functionality.</li>
+                <li>Implemented Active Directory integration with PT AF.</li>
+                <li>Created detailed reporting feature for PT AF.</li>
                 <li>Took <a href="img/dst_contest.jpg">3rd place</a> in Digital Substation Takeover contest at <a href="https://www.phdays.com/en/about/photos/#&gid=3&pid=17">Positive Hack Days V</a>.</li>
               </ul>
             </div>
@@ -144,7 +144,7 @@
               <a href="https://github.com/ProfitwareWebDev">Web Development course</a> for Computer Linguists.
               <ul>
                 <li>Created open source web development course from scratch targeting students for Master’s program Computer Linguistics.</li>
-                <li>Successfully conducted the course for groups up to 20 students <a href="https://www.hse.ru/edu/courses/184775196">in HSE</a>.</li>
+                <li>Successfully conducted experimental course for groups up to 20 students <a href="https://www.hse.ru/edu/courses/184775196">in HSE</a>.</li>
               </ul>
             </div>
 
@@ -152,7 +152,7 @@
             
             <div class="title">Engineer's Degree @ Moscow Institute of Electronics and Mathematics / Higher School of Economics (2010 - 2016)</div>
             <div class="copy">
-              <a href="https://github.com/MIEMHSE">Open Source Software</a> R&amp;D during courseworks
+              <a href="https://github.com/MIEMHSE">Open Source Software</a> R&amp;D as part of term papers
               using Python, Erlang and Clojure.
               <ul>
                 <li><a href="https://github.com/MIEMHSE/circuitrylib">CircuitryLib</a> – Python library for modelling various circuit engineering systems.</li>
@@ -166,7 +166,7 @@
             <div class="clear padding30"></div>
 
             <div class="copy">
-              <a href="https://www.hse.ru/en/edu/vkr/182863697">Engineer's Degree thesis</a> implementation and defense.
+              <a href="https://www.hse.ru/en/edu/vkr/182863697">Engineer's Degree thesis</a> real-life implementation and defense.
               <ul>
                 <li>Implemented WAF Cluster Configuration Management System.</li>
                 <li>Successfully <a href="https://www.youtube.com/watch?v=-pzmGtnNtz4">defended the thesis</a> (10 out of 10).</li>
@@ -190,17 +190,17 @@
             <div class="title">Open Source Developer @ The Profitware Group (2012 - present)</div>
             <div class="copy">
               <a href="https://github.com/profitware">Open Source Software</a>
-              R&amp;D using all kinds of languages and technologies.
+              R&amp;D using various kinds of languages and technologies.
               <ul>
                 <li>Created <a href="https://profitware.tech/prde">Productivity Desktop Environment</a> for Fedora GNU/Linux.</li>
                 <li>Created <a href="https://profitware.tech/platform">ProfitPlatform-NG</a> – Python and Erlang distributed RPC using RabbitMQ.</li>
                 <li>Implemented <a href="https://github.com/rvirding/lfe/commits?author=profitware">finite lazy sequences and cycle/1</a> in Lisp Flavoured Erlang (LFE).</li>
-                <li>Made small improvements to <a href="https://github.com/saltstack/salt/commits?author=profitware">SaltStack</a> and <a href="https://github.com/MaxKellermann/ferm/pull/7">Ferm</a>.</li>
+                <li>Made minor improvements in <a href="https://github.com/saltstack/salt/commits?author=profitware">SaltStack</a> and <a href="https://github.com/MaxKellermann/ferm/pull/7">Ferm</a>.</li>
                 <li>Implemented highlighting libraries <a href="https://github.com/hylang/hyghlight">generator</a> for HyLang.</li>
                 <li>Added HyLang support into <a href="https://github.com/jneen/rouge/pull/623">Rouge</a> and <a href="https://github.com/isagalaev/highlight.js/pull/1382">Highlight.js</a>.</li>
-                <li>Added <a href="https://github.com/timols/java-gitlab-api/pull/227">some fields support</a> into Java Gitlab API.</li>
+                <li>Added <a href="https://github.com/timols/java-gitlab-api/pull/227">support for some fields</a> into Java GitLab API.</li>
                 <li>Created <a href="https://github.com/profitware/lein-bump-version">project version bumping plugin</a> for Leiningen.</li>
-                <li>Fixed <a href="https://github.com/clojure-emacs/clomacs/pull/12">wrong behavior</a> in Clomacs library for Clojure and Emacs integration.</li>
+                <li>Fixed <a href="https://github.com/clojure-emacs/clomacs/pull/12">incorrect behavior</a> in Clomacs library for Clojure and Emacs integration.</li>
                 <li>Created basic <a href="https://github.com/insomnious-melissa/melissa-core">home automation system</a> using LFE.</li>
               </ul>
             </div>
@@ -224,7 +224,7 @@
               R&amp;D using Python (Django, Tornado), JavaScript, Postgres and Oracle.
               <ul>
                 <li>Implemented and maintained different widgets and sections for Quote.rbc.ru.</li>
-                <li>Created authorization, registration and Personal Cabinet parts from scratch and integrated them with Oracle database.</li>
+                <li>Created authorization, registration and Personal Cabinet sections from scratch and integrated them with Oracle database.</li>
                 <li>Implemented and maintained back office infrastructure for the project.</li>
                 <li>Migrated <a href="https://cash.rbc.ru/">Spot Currency Market</a> from Oracle to Postgres.</li>
                 <li>Had <a href="https://www.youtube.com/watch?v=ktSo_Njy6Cc">a talk about client-server unified templating engine</a> at <a href="http://www.moscowpython.ru/meetup/23/universal-template-builder/">MoscowPython 23</a>.</li>
@@ -249,9 +249,9 @@
               <a href="http://www.bssys.com/en/solutions/financial-institutions/dbo-bs-client-chastnyy-klient/">Online Banking Solutions</a>
               R&amp;D using Delphi and JavaScript.
               <ul>
-                <li>Developed and maintained special versions of online banking solution Private Client for several international and russian banks.</li>
-                <li>Implemented multiple HSA (handwritten signature analogue) functional in standard version of online banking solution Private Client.</li>
-                <li>Created simple build system using Ant, Jython, Java and Javascript.</li>
+                <li>Developed and maintained custom versions of online banking solution Private Client for several international and Russian banks.</li>
+                <li>Implemented multiple HSA functionality (handwritten signature analogue) in standard version of online banking solution Private Client.</li>
+                <li>Created user-friendly build system using Ant, Jython, Java and Javascript.</li>
               </ul>
             </div>
           </div>
@@ -269,7 +269,7 @@
             </div>
             
             <div class="clear padding30">
-              <a href="https://github.com/profitware" class="zocial icon github">Github profile</a>&nbsp;
+              <a href="https://github.com/profitware" class="zocial icon github">GitHub profile</a>&nbsp;
               <a href="https://linkedin.com/in/bug2bug" class="zocial icon linkedin">LinkedIn profile</a>&nbsp;
               <a href="https://facebook.com/bug2bug" class="zocial icon facebook">Facebook profile</a>&nbsp;
               <a href="https://twitter.com/IwasakiRussia" class="zocial icon twitter">Twitter profile</a>&nbsp;
