--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
             
             <div class="clear padding30">
               <a href="https://github.com/profitware" class="zocial icon github">GitHub profile</a>&nbsp;
+              <a href="https://soundcloud.com/bug2bug/albums" class="zocial icon soundcloud">Soundcloud profile</a>&nbsp;
               <a href="https://linkedin.com/in/bug2bug" class="zocial icon linkedin">LinkedIn profile</a>&nbsp;
               <a href="https://facebook.com/bug2bug" class="zocial icon facebook">Facebook profile</a>&nbsp;
               <a href="https://twitter.com/IwasakiRussia" class="zocial icon twitter">Twitter profile</a>&nbsp;
-              <a href="https://vk.com/bug2bug" class="zocial vk icon">VKontakte profile</a>&nbsp;
-              <a href="https://www.last.fm/user/BuG2BuG" class="zocial icon lastfm">Last.fm profile</a>
+              <a href="https://vk.com/bug2bug" class="zocial vk icon">VKontakte profile</a>
             </div>
           </div>
         </div>
