Update current job and add disclaimer

--- a/index.html
+++ b/index.html
@@ -81,13 +81,30 @@
           <div class="clear padding30"></div>
           <div class="post well">
             <div class="bavatar visible-desktop">
+              <a href="https://ibm.github.io/">
+                <img src="img/ibm_logo.png">
+              </a>
+              <div class="clear padding30"></div>
+            </div>
+
+            <div class="title">Open Source Software Architect @ IBM (2019 - present)</div>
+            <div class="copy">
+              Open Source Software R&amp;D using various kinds of languages and technologies.
+            </div>
+          </div>
+
+          <div class="clear"></div>
+          <hr>
+          <div class="clear padding30"></div>
+          <div class="post well">
+            <div class="bavatar visible-desktop">
               <a href="https://ptsecurity.com/">
                 <img src="img/pt_logo.jpg">
               </a>
               <div class="clear padding30"></div>
             </div>
-            
-            <div class="title">Team Leader @ Positive Technologies (2016 - present)</div>
+
+            <div class="title">Team Leader @ Positive Technologies (2016 - 2019)</div>
             <div class="copy">
               <a href="https://github.com/PositiveTechnologies/flower">Flower</a>
               Open Source R&amp;D using Clojure.
@@ -281,6 +298,8 @@
                 <img src="https://bug2bug.me/img/avatar.jpg">
               </a>
               <p class="atext">...Music and Open Source Software Creator / Wake up, Neo...</p>
+              <div class="clear padding30"></div>
+              <p class="atext"><b>Disclaimer.</b> The postings on this site are my own and don't necessarily represent IBM's positions, strategies or opinions.</p>
             </div>
             
             <div class="clear padding30">
