--- a/template.tumblr.html
+++ b/template.tumblr.html
@@ -295,6 +295,8 @@ Answer: {PlaintextAnswer}{/block:Answer}</a>
                     <img src="https://bug2bug.me/img/avatar.jpg">
                 </a>
                 <p class="atext">...Music and Open Source Software Creator / Wake up, Neo...</p>
+                <div class="clear padding30"></div>
+                <p class="atext"><b>Disclaimer.</b> The postings on this site are my own and don't necessarily represent IBM's positions, strategies or opinions.</p>
             </div>
             
             <div class="clear padding30">
