Add Strava widget

--- a/template.tumblr.html
+++ b/template.tumblr.html
@@ -307,6 +307,10 @@ Answer: {PlaintextAnswer}{/block:Answer}</a>
                 <a href="https://twitter.com/IwasakiRussia" class="zocial icon twitter">Twitter profile</a>&nbsp;
                 <a href="https://vk.com/bug2bug" class="zocial vk icon">VKontakte profile</a>
             </div>
+
+            <div class="clear padding30"></div>
+            <iframe height="454" width="100%" frameborder="0" allowtransparency="true" scrolling="no" src="https://www.strava.com/athletes/61951671/latest-rides/f96641c9ed8a5a60200cd13cbd1c31d9eff4f96b"></iframe>
+
             <div class="clear padding30">
                 <a href="https://psnprofiles.com/bug2bug"><img src="https://card.psnprofiles.com/1/bug2bug.png" border="0"></a>
             </div>
