Update HSE profile

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
 
             <div class="title">Computer Science Lecturer @ Higher School of Economics (2016 - present)</div>
             <div class="copy">
-              <a href="https://github.com/ProfitwareWebDev">Web Development course</a> for Computer Linguists.
+              <a href="https://github.com/ProfitwareWebDev">Web Development course</a> for Computational Linguists and Digital Humanities.
               <ul>
-                <li>Created open source web development course from scratch targeting students for Master’s program Computer Linguistics.</li>
+                <li>Created open source web development course from scratch targeting students for Masters' programs Computational Linguistics and Digital Humanities.</li>
                 <li>Successfully conducted experimental course for groups up to 20 students <a href="https://www.hse.ru/edu/courses/184775196">in HSE</a>.</li>
                 <li>Created and managed <a href="https://github.com/hseling">GitHub</a> and <a href="https://linghub.ru/">servers</a> for HSE School of Linguistics.</li>
               </ul>
