--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
             <div class="copy">
               Open Source Software R&amp;D using various kinds of languages and technologies.
               <ul>
-                <li>Various engagements in largest Telcos, Banks, Natural Resources and Government based companies in Russia, Central and Eastern Europe.</li>
+                <li>Various engagements in largest Telcos, Banks, Retail, Natural Resources' and Government based companies in Russia, Central and Eastern Europe.</li>
                 <li>Open Source Software <a href="https://bit.ly/webinarsOSS">webinars</a>.
                 <li>Red Hat Certified Architect in Infrastructure Level II (<a href="https://rhtapps.redhat.com/verify/?certId=200-054-419">200-054-419</a>)</li>
                 <li>Implemented internal FMECA-like Risk Management Toolkit (methodology and software).</li>
                 <li>Implemented internal Cyber Polygons for SW delivery teams to test, learn and implement Open Source Software stacks.</li>
                 <li>Had a talk "Building Bridges to Modern Infrastructure" at <a href="https://www.openlogic.com/open-at-home-2">Open@Home Virtual Conference</a>.</li>
                 <li>Mentored several Engineers and Architects.</li>
-                <li>Achieved <a href="https://www.youracclaim.com/users/sergey-sobko/badges">dozens of badges</a> at YourAcclaim.</li>
+                <li>Earned <a href="https://www.credly.com/users/sergey-sobko/badges">dozens of badges</a> on Credly.</li>
               </ul>
             </div>
           </div>
@@ -376,7 +376,7 @@
       <hr>
 
       <footer>
-        <p style="padding-left: 10px;">&copy; 2012-2019, <a href="https://bug2bug.me/">Sergey Sobko</a></p>
+        <p style="padding-left: 10px;">&copy; 2012-2021, <a href="https://bug2bug.me/">Sergey Sobko</a></p>
       </footer>
 
     </div> <!-- /container -->
