--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
               <ul>
                 <li>Various engagements in largest Telcos, Banks, Retail, Natural Resources' and Government based companies in Russia, Central and Eastern Europe.</li>
                 <li>Open Source Software <a href="https://bit.ly/webinarsOSS">webinars</a>.
+                <li>Open CA Master Certified Architect in Solution Architecture (<a href="https://www.opengroup.org/openprofessions/certificates/op.html?pcid=CA125669">CA125669</a>)</li>
                 <li>Red Hat Certified Architect in Infrastructure Level II (<a href="https://rhtapps.redhat.com/verify/?certId=200-054-419">200-054-419</a>)</li>
                 <li>Implemented internal FMECA-like Risk Management Toolkit (methodology and software).</li>
                 <li>Implemented internal Cyber Polygons for SW delivery teams to test, learn and implement Open Source Software stacks.</li>
@@ -172,7 +173,7 @@
           <div class="clear padding30"></div>
           <div class="post well">
             <div class="bavatar visible-desktop">
-              <a href="https://www.hse.ru/en/">
+              <a href="https://www.hse.ru/en/staff/ssobko">
                 <img src="img/hse_logo.png">
               </a>
               <div class="clear padding30"></div>
