Add Discogs profile

--- a/template.tumblr.html
+++ b/template.tumblr.html
@@ -308,6 +308,12 @@ Answer: {PlaintextAnswer}{/block:Answer}</a>
                 <a href="https://vk.com/bug2bug" class="zocial vk icon">VKontakte profile</a>
             </div>
 
+            <div class="clear padding30" style="padding-left: 10px;">
+                 <a href="https://www.discogs.com/user/bug2bug/collection?sort=year&sort_order=asc">
+                      <img src="https://bug2bug.me/img/discogs-logo.png" alt="Discogs - BuG2BuG Collection" width="30%" height="30%">
+                 </a>
+            </div>
+
             <div class="clear padding30"></div>
             <iframe height="454" width="100%" frameborder="0" allowtransparency="true" scrolling="no" src="https://www.strava.com/athletes/61951671/latest-rides/f96641c9ed8a5a60200cd13cbd1c31d9eff4f96b"></iframe>
 
