--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
               <div class="clear padding30"></div>
             </div>
 
-            <div class="title">Lead Open Source Software Architect @ IBM (2019 - present)</div>
+            <div class="title">Lead Solution Architect @ IBM (2019 - present)</div>
             <div class="copy">
-              Open Source Software R&amp;D using various kinds of languages and technologies.
+              Cloud, Infrastructure and Open Source Software R&amp;D using various kinds of technologies.
               <ul>
-                <li>Various engagements in largest Telcos, Banks, Retail, Natural Resources' and Government based companies in Russia, Central and Eastern Europe.</li>
+                <li>Various engagements in largest Telcos, Banks, Retail, Natural Resources' and Government based companies in Northern, Central and Eastern Europe.</li>
                 <li>Open Source Software <a href="https://bit.ly/webinarsOSS">webinars</a>.
                 <li>Open CA Master Certified Architect in Solution Architecture (<a href="https://www.opengroup.org/openprofessions/certificates/op.html?pcid=CA125669">CA125669</a>)</li>
                 <li>Red Hat Certified Architect in Infrastructure Level II (<a href="https://rhtapps.redhat.com/verify/?certId=200-054-419">200-054-419</a>)</li>
@@ -382,7 +382,7 @@
       <hr>
 
       <footer>
-        <p style="padding-left: 10px;">&copy; 2012-2022, <a href="https://bug2bug.me/">Sergey Sobko</a></p>
+        <p style="padding-left: 10px;">&copy; 2012-2024, <a href="https://bug2bug.me/">Sergey Sobko</a></p>
       </footer>
 
     </div> <!-- /container -->
