--- a/resume/index.html
+++ b/resume/index.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="https://bug2bug.ru/">
-  <meta http-equiv="refresh" content="0; url=https://bug2bug.ru/">
+  <link rel="canonical" href="https://bug2bug.me/">
+  <meta http-equiv="refresh" content="0; url=https://bug2bug.me/">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
-  <a href="https://bug2bug.ru/">Click here if you are not redirected.</a>
-  <script>location="https://bug2bug.ru/"</script>
+  <a href="https://bug2bug.me/">Click here if you are not redirected.</a>
+  <script>location="https://bug2bug.me/"</script>
 </html>
